tests/paczka1/small_fuzzy/84280870.err
Error in line 6: S60 S60 66,9
Error in line 8: S60 S646 37,5
Error in line 4: MgGJZ3yFg S646 36,6
Error in line 12: sdb S60 30,7
